clang/test/BSC/Negative/Generic/IncompleteTemplateParameters/incomplete_do_not_crash6.cbs
// RUN: %clang_cc1 -verify %s

int x() { return y<int,
// expected-error@-1 {{expected '>'}}
// expected-note@-2 {{to match this '<'}}
// expected-note@-3 {{to match this '{'}}

// expected-error@+1 {{expected expression}}
// expected-error@+0 {{expected '}'}}
